--- a/PS5-CHEME-5660-Student-Notebook-Fall-2025.ipynb
+++ b/PS5-CHEME-5660-Student-Notebook-Fall-2025.ipynb
@@ -810,43 +810,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 1,
    "id": "1023b657-6e82-4197-a93d-e1242261a055",
    "metadata": {},
    "outputs": [
     {
-     "ename": "MethodError",
-     "evalue": "MethodError: Cannot `convert` an object of type Nothing to an object of type Float64\nThe function `convert` exists, but no method is defined for this combination of argument types.\n\nClosest candidates are:\n  convert(::Type{Float64}, !Matched::Measures.AbsoluteLength)\n   @ Measures ~/.julia/packages/Measures/4QYr0/src/length.jl:12\n  convert(::Type{T}, !Matched::T) where T<:Number\n   @ Base number.jl:6\n  convert(::Type{T}, !Matched::Ratios.SimpleRatio{S}) where {T<:AbstractFloat, S}\n   @ Ratios ~/.julia/packages/Ratios/FsiCW/src/Ratios.jl:51\n  ...\n",
+     "ename": "LoadError",
+     "evalue": "UndefVarError: θ not defined",
      "output_type": "error",
      "traceback": [
-      "MethodError: Cannot `convert` an object of type Nothing to an object of type Float64\n",
-      "The function `convert` exists, but no method is defined for this combination of argument types.\n",
-      "\n",
-      "Closest candidates are:\n",
-      "  convert(::Type{Float64}, !Matched::Measures.AbsoluteLength)\n",
-      "   @ Measures ~/.julia/packages/Measures/4QYr0/src/length.jl:12\n",
-      "  convert(::Type{T}, !Matched::T) where T<:Number\n",
-      "   @ Base number.jl:6\n",
-      "  convert(::Type{T}, !Matched::Ratios.SimpleRatio{S}) where {T<:AbstractFloat, S}\n",
-      "   @ Ratios ~/.julia/packages/Ratios/FsiCW/src/Ratios.jl:51\n",
-      "  ...\n",
-      "\n",
-      "\n",
-      "Stacktrace:\n",
-      " [1] setproperty!(x::MyAmericanPutContractModel, f::Symbol, v::Nothing)\n",
-      "   @ Base ./Base_compiler.jl:57\n",
-      " [2] _build(modeltype::Type{MyAmericanPutContractModel}, data::@NamedTuple{K::Nothing, premium::Nothing, IV::Nothing, DTE::Nothing, sense::Int64, copy::Int64})\n",
-      "   @ VLQuantitativeFinancePackage ~/.julia/packages/VLQuantitativeFinancePackage/IwF9F/src/Factory.jl:18\n",
-      " [3] build(model::Type{MyAmericanPutContractModel}, data::@NamedTuple{K::Nothing, premium::Nothing, IV::Nothing, DTE::Nothing, sense::Int64, copy::Int64})\n",
-      "   @ VLQuantitativeFinancePackage ~/.julia/packages/VLQuantitativeFinancePackage/IwF9F/src/Factory.jl:413\n",
-      " [4] top-level scope\n",
-      "   @ ~/Desktop/julia_work/CHEME-5660-Fall-2025/PS5-CHEME-5660-TEMPLATE-F25/jl_notebook_cell_df34fa98e69747e1a8f8a730347b8e2f_X45sZmlsZQ==.jl:1"
+      "UndefVarError: θ not defined",
+      "",
+      "Stacktrace:",
+      " [1] top-level scope",
+      "   @ In[1]:1",
+      " [2] eval",
+      "   @ .\\boot.jl:368 [inlined]",
+      " [3] include_string(mapexpr::typeof(REPL.softscope), mod::Module, code::String, filename::String)",
+      "   @ Base .\\loading.jl:1428"
      ]
     }
    ],
    "source": [
     "put_contract_model = build(MyAmericanPutContractModel, (\n",
-    "        K = nothing, # TODO: set the strike price\n",
+    "        K = 17, # TODO: set the strike price\n",
     "        premium = nothing, # TODO: set the premium value\n",
     "        IV = nothing, # TODO: set the IV\n",
     "        DTE = nothing, # TODO: set the DTE (units: years) - don't forget to convert days to years\n",
@@ -3233,15 +3220,15 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 1.12.1",
+   "display_name": "Julia 1.8.0",
    "language": "julia",
-   "name": "julia-1.12"
+   "name": "julia-1.8"
   },
   "language_info": {
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "1.12.1"
+   "version": "1.8.0"
   }
  },
  "nbformat": 4,
